# 21_words

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
config/: settings.py  urls.py
game/: admin.py  models.py  selectors.py
game/api/: urls.py  views.py
game/management/commands/: import_words.py  recompute_prompt_valid_words_count.py  seed_prompts.py
game/migrations/: 0001_initial.py  0002_alter_session_prompts_default.py
game/services/: gameplay.py  leaderboard.py  scoring.py  session_factory.py  validation.py
game/tests/: test_attempt_api.py  test_health.py  test_import_words.py  test_leaderboard_api.py  test_openapi.py  test_session_api.py  test_validation.py
